homework/5.kubernetes-network/deployment_pg.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pg
  name: pg
#  namespace: pg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pg
  strategy:
    type: Recreate
  template:
    metadata:
#      namespace: pg
      labels:
        app: pg
    spec:
      containers:
      - image: postgres:10.13
        name: pg
        volumeMounts:
          - name: pg-pvc-vm
            mountPath: /var/lib/postgresql/data
        ports:
          - protocol: TCP
            containerPort: 5432
      volumes:
        - name: pg-pvc-vm
          persistentVolumeClaim:
            claimName: pg-pvc
