homework/5.kubernetes-network/deployment_rm.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pg
  name: rm
#  namespace: pg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rm
  strategy:
    type: Recreate
  template:
    metadata:
#      namespace: pg
      labels:
        app: rm
    spec:
      containers:
      - image: redmine:4.1.1
        name: rm
        volumeMounts:
          - name: pg-pvc-vm
            mountPath: /var/lib/postgresql/data
        ports:
          - protocol: TCP
            containerPort: 3000
      volumes:
        - name: pg-pvc-vm
          persistentVolumeClaim:
            claimName: pg-pvc
