homework/5.kubernetes-network/service_pg.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
#  namespace: pg
  labels:
    app: pg
spec:
  type: ClusterIP
  ports:
   - port: 5432
  selector:
   app: pg
