homework/5.kubernetes-network/service_rm.yaml
apiVersion: v1
kind: Service
metadata:
  name: rm-db
#  namespace: pg
  labels:
    app: rm
spec:
  type: ClusterIP
  ports:
   - port: 3000
  selector:
   app: rm
